Added hacked example to get count from a stream